Fix(?) - Search bar being cut off
Fixed sticky search bar being cut off by upping the margin-top property a bit

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        2.0.4
+@version        2.0.5
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @preprocessor stylus
@@ -1804,7 +1804,7 @@ if themep == classic {
 		width: 0rem;
 		height: 100%;
 		overflow:hidden;
-		margin-top: .5rem;
+		margin-top: 1rem;
 		margin-right: -1rem;
 	}
 	.search-help {
@@ -1834,7 +1834,7 @@ if themep == classic {
 		color: var(--base-text);
 		background-color: var(--bg-400);
 		border: 2px solid var(--bg-300);
-		margin-top: .5rem;
+		margin-top: 1rem;
 		margin-inline: auto;
 	}
 	#search-box button {
